<resources>
    <string name="app_name">ENKA SACCO</string>
    <string name="login">Login</string>
    <string name="toast_welcome">Welcome %1$s</string>
    <string name="unable_to_connect">Not connected to internet</string>
    <string name="basic">Basic</string>
    <string name="username">Username</string>
    <string name="newusername">New Username</string>
    <string name="progress_message_login">Logging In</string>
    <string name="progress_message_loading">Loading</string>
    <string name="password">Password</string>
    <string name="newpassword">New Password</string>
    <string name="email">Email</string>
    <string name="accounts">Accounts</string>
    <string name="clients">Clients</string>
    <string name="funds_transfer">Funds Transfer</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="charges">Charges</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="about_us">About Us</string>
    <string name="saving_account_details">Saving Account Details</string>
    <string name="savings_account">Savings Account</string>
    <string name="error_loan_account_details_loading">Error loading in loan accounts detail</string>
    <string name="nominal_interest_rate">Nominal Interest Rate</string>
    <string name="account_number">Account Number</string>
    <string name="account_balance">Account Balance</string>
    <string name="total_deposits">Total Deposits</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home">Home</string>
    <string name="title_home">Enka</string>
    <string name="home2">Home</string>
    <string name="medium_text">Medium Text</string>
    <string name="small_text">Small Text</string>
    <string name="client_accounts">Client Accounts</string>
    <string name="splash">Splash</string>
    <string name="savings">Saving</string>
    <string name="loan">Loan</string>
    <string name="loan_account">Loan Account</string>
    <string name="share">Share</string>
    <string name="share_account">Share Account</string>
    <string name="clients_list">Chose a client</string>
    <string name="working">Working</string>
    <string name="status_image">Status Image</string>
    <string name="loan_repayment_schedule">Repayment Schedule</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="made_on">Made on</string>
    <string name="make_transfer">Make a Transfer</string>
    <string name="select_loan_product">Apply Mobile Loan</string>
    <string name="purpose_of_loan">Purpose of Loan*</string>
    <string name="principal_amount">Principal Amount*</string>
    <string name="title_deed_no">Title Deed Number</string>
    <string name="id_no">ID Number</string>
    <string name="amount">Amount</string>
    <string name="remark">Remark</string>
    <string name="expected_disbursement_date">Expected Disbursement Date</string>
    <string name="submission_date">Submission Date</string>
    <string name="submitted">Submitted</string>
    <string name="disbursement">Disbursement</string>
    <string name="disbursed">Disbursed</string>
    <string name="borrow">Borrow</string>
    <string name="repay">Repay</string>
    <string name="loanlimit">Loan Limit</string>
    <string name="myloanlimit12">Your loan limit is</string>
    <string name="myloanlimit2">My Loan Limit</string>
    <string name="ourservices">What would you like to do?</string>
    <string name="payinstraction">How do you want to pay your loan?</string>
    <string name="enterphoneno1">Please enter your phone number.</string>
    <string name="enteramount1">Please enter amount</string>
    <string name="qualification1">You have qualified for a maximum of :</string>
    <string name="proceedwithpay">Continue with payment</string>
    <string name="accounttobepaid1">You are sending this amount to paybill no 529148  </string>
    <string name="accounttobepaidfor">for account no  </string>
    <string name="goodmorning1">Good Morning </string>
    <string name="goodafternoon1">Good Afternoon  </string>
    <string name="goodevening1">Good Evening </string>
    <string name="enteridno1">Please enter your ID number</string>
    <string name="phone_number1">Please enter your phone number</string>
    <string name="enteridno2">Enter ID number</string>
    <string name="transfer_date">Transfer Date</string>
    <string name="apply_for_loan">Apply for Loan</string>
    <string name="update_loan">Update Loan</string>
    <string name="withdraw_loan">Withdraw Loan</string>
    <string name="withdraw_loan_reason">Reason to Withdraw Loan</string>
    <string name="loan_account_withdrawn_successfully">Loan account successfully withdrawn</string>
    <string name="submit_loan">Submit Loan</string>
    <string name="applyloan">Apply Now</string>
    <string name="new_loan_application">Loan Application for</string>
    <string name="update_loan_application">Update Loan Application for</string>
    <string name="loan_interest_type">Interest Type</string>
    <string name="amortization">Amortization</string>
    <string name="interest_calculation_period">Interest calculation period</string>
    <string name="repayment_strategy">Repayment Strategy</string>
    <string name="pay_to">Pay To</string>
    <string name="pay_from">Pay From</string>
    <string name="cancel">Cancel</string>
    <string name="review_transfer">Review</string>
    <string name="transfer_to">Transfer To</string>
    <string name="transfer_from">Transfer From</string>
    <string name="making_transfer">Making Transfer</string>
    <string name="deposit">Mpesa Deposit</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="remark_is_mandatory">Remark is mandatory</string>
    <string name="approved">Approved</string>
    <string name="shares_pending">Pending</string>
    <string name="loan_amount_paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="balance">Balance</string>
    <string name="rejected">Rejected</string>
    <string name="waiting">Waiting</string>
    <string name="overpaid">Overpaid</string>
    <string name="in_arrears">In Arrears</string>
    <string name="select_you_want">Select all you want to apply</string>
    <string name="filter_savings">Filter Savings Accounts</string>
    <string name="filter_loan">Filter Loan Accounts</string>
    <string name="filter_share">Filter Share Accounts</string>
    <string name="search">Search</string>
    <string name="select_pay_to">Select Account to Pay To</string>
    <string name="select_pay_from">Select Account to Pay From</string>
    <string name="enter_remarks">Enter Remarks for transfer</string>
    <string name="select_beneficiary">Select Beneficiary</string>
    <string name="continue_str">Continue</string>
    <string name="close">Close</string>
    <string name="choose_transfer_type">Choose Transfer Type</string>
    <string name="transfer_to_savings">Transfer To Savings</string>
    <string name="transfer_from_savings">Transfer from Savings</string>
    <string name="loan_charges">Loan Charges</string>
    <string name="savings_charges">Savings Charges</string>
    <string name="active">Active</string>
    <string name="closed">Closed</string>
    <string name="withdrawn">Withdrawn</string>
    <string name="withdrawn2">Loan Rejected</string>
    <string name="need_approval">Need Approval</string>
    <string name="pending">Pending</string>
    <string name="matured">Matured</string>
    <string name="create_an_account">Create account</string>
    <string name="forget_password">Forgot password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="recover">Recover</string>
    <string name="request_id">Request Id</string>
    <string name="authentication_token">Authentication Token</string>
    <string name="verify">Verify</string>
    <string name="verifying">Verifying</string>
    <string name="sign_up">Signing up</string>
    <string name="verified">User has been verified successfully</string>
    <string name="rb_mobile">mobile</string>
    <string name="rb_email">email</string>
    <string name="verification_mode">Verification Mode</string>
    <string name="blank">&#160;</string>
    <string name="import_qr">Import QR</string>
    <string name="view_guarantor">View Guarantor</string>
    <string name="add_guarantor">Add Guarantor</string>
    <string name="delete_guarantor">Delete Guarantor</string>
    <string name="update_guarantor">Update Guarantor</string>
    <string name="guarantor_type">Guarantor Type</string>
    <string name="no_guarantors">No Guarantors</string>
    <string name="tap_to_add_guarantor">Tap to Add Guarantor</string>
    <string name="guarantor_details">Guarantor Details</string>
    <string name="joined_date">Joined Date</string>
    <string name="submit">Submit</string>
    <string name="account_not_active_to_perform_deposit">Account should to be Active to perform a
        deposit
    </string>
    <string name="account_not_active_to_perform_transfer">Account should to be Active to perform a
        transfer
    </string>
    <string name="empty_savings_accounts">There is no SavingsAccount associated with you</string>
    <string name="empty_loan_accounts">There is no LoanAccount associated with you</string>
    <string name="empty_share_accounts">There is no ShareAccount associated with you</string>
    <string name="empty_transactions">There is no transactions associated with you</string>
    <string name="empty_repayment_schedule">There is no repayment schedule associated with you
    </string>
    <string name="no_more_transactions_available">No more transactions available</string>
    <string name="no_transaction">No Transaction</string>
    <string name="no_dob_found">No DOB found.</string>
    <string name="not_assigned_with_any_group">Not Assigned with any group</string>
    <string name="error_unauthorised">Invalid Username/Password</string>
    <string name="error_message_server">Error loading response from server</string>
    <string name="error_validation_blank">%1$s cannot be blank</string>
    <string name="error_validation_minimum_chars">%1$s cannot be less than %2$d characters</string>
    <string name="error_validation_cannot_contain_spaces">%1$s cannot contain %2$s</string>
    <string name="error_validation_cannot_contain_leading_or_trailing_spaces">%1$s cannot begin or
        end with blank space
    </string>
    <string name="error_internal_server">Error in internal server, please try again</string>
    <string name="error_client_loading">Error loading client list</string>
    <string name="error_loan_accounts_list_loading">Error loading in loan accounts list</string>
    <string name="error_saving_accounts_list_loading">Error loading in saving accounts list</string>
    <string name="error_saving_account_details_loading">Error loading in saving accounts detail
    </string>
    <string name="error_recent_transactions_loading">Error loading in Recent Transactions</string>
    <string name="error_client_charge_loading">Error loading in client charges</string>
    <string name="error_no_charge">No charges found</string>
    <string name="error_client_not_found">Client Not Found</string>
    <string name="error_fetching_client">Failed to fetch Client</string>
    <string name="error_fetching_user_profile">Failed to fetch User Profile</string>
    <string name="error_fetching_accounts">Failed to fetch Accounts</string>
    <string name="error_fetching_repayment_schedule">Failed To fetch repayment schedule</string>
    <string name="error_same_account_transfer">Can\'t transfer with in same account</string>
</resources>