<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="-6dp"
            android:layout_marginEnd="-5dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="Create Account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_number"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_marginTop="20dp"
            app:errorEnabled="true"
            android:layout_width="match_parent">

            <android.support.design.widget.TextInputEditText
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:inputType="text"
                android:id="@+id/et_username"
                android:hint="@string/username"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:visibility="gone"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:hint="@string/first_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:visibility="gone"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:hint="@string/last_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:hint="@string/phone_number"
                android:inputType="number" />



        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            android:layout_width="match_parent">

            <EditText
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:inputType="textEmailAddress"
                android:hint="Email address"
                android:id="@+id/et_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            style="@style/LoginTextInputLayoutStyle"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent">

            <EditText
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:inputType="textPassword"
                android:hint="Enter password"
                android:id="@+id/et_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent">

            <EditText
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:inputType="textPassword"
                android:hint="Confirm password"
                android:id="@+id/et_confirm_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verification_mode"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <RadioGroup
                android:id="@+id/rg_verification_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:checked="true"
                    android:text="@string/rb_email" />

                <RadioButton
                    android:id="@+id/rb_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_mobile" />
            </RadioGroup>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue"
            android:layout_marginTop="@dimen/login_margin_top"
            android:layout_marginBottom="@dimen/login_margin_bottom"
            android:text="@string/register"
            android:textColor="@color/white" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>