<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="-5dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="Verify User" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_marginTop="20dp">
        <EditText android:id="@+id/et_request_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_id"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginTextInputLayoutStyle"
        app:errorEnabled="true">
        <EditText android:id="@+id/et_authentication_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authentication_token"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/blue"
        android:layout_marginBottom="@dimen/login_margin_bottom"
        android:layout_marginTop="@dimen/login_margin_top"
        android:textColor="@color/white"
        android:text="@string/verify"/>

    </LinearLayout>
</LinearLayout>