<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/LinearLogin"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:fitsSystemWindows="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_height="140dp"
                android:layout_width="140dp"
                android:layout_margin="10dp"
                android:src="@drawable/enka"/>

            <!-- Username  Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent">

                <EditText
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:hint="@string/username"
                    android:text="cliffmasi"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_height="wrap_content"
                style="@style/LoginTextInputLayoutStyle"
                android:theme="@style/Widget.Design.TextInputLayout"
                app:errorEnabled="true"
                app:counterEnabled="true"
                android:layout_marginTop="10dp"
                app:counterMaxLength="15"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true">

                <EditText
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:hint="@string/password"
                    android:text="1234567"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:background="@drawable/blue"
                android:textColor="@color/white" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_register"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/create_an_account"
                android:background="@drawable/transparent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary"/>

            <TextView
                android:layout_width="match_parent"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="7dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:text="Reset password"
                android:id="@+id/ResetTextView"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>